java8.spoofax3/test/statics/java/interfaces/selfinheritance.no.spt.bak
module interfaces/selfinheritance_no

language metaborg-java

test selfinheritance [[

test;



// error: cyclic inheritance involving I

[I]
public interface I extends I {}


]] analysis fails
   run javacFails to ""
